--- a/auth/templates/auth/base.html
+++ b/auth/templates/auth/base.html
@@ -12,9 +12,16 @@
         <div class="container-fluid">
             <div>
                 <ul class="navbar-nav">
+                    {% if user.is_authenticated %}
+                    <span class="navbar-text">Logged in as {{user.username}} | </span>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                    {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="/home">Home</a>
                     </li>
+                    {% endif %}
                     <li
                         <a class=nav-item" href="/create-post">Post</a>
                     </li>
