--- a/auth/templates/auth/base.html
+++ b/auth/templates/auth/base.html
@@ -22,8 +22,8 @@
                         <a class="nav-link" href="/home">Home</a>
                     </li>
                     {% endif %}
-                    <li
-                        <a class=nav-item" href="/create-post">Post</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/create-post">Post</a>
                     </li>
                 </ul>
             </div>
