--- a/auth/templates/auth/base.html
+++ b/auth/templates/auth/base.html
@@ -13,24 +13,22 @@
             <div>
                 <ul class="navbar-nav">
                     {% if user.is_authenticated %}
-                    <span class="navbar-text">Logged in as {{user.username}} | </span>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/logout">Logout</a>
-                    </li>
+                    <span class="navbar-text">Logged in as {{user.username}} | <a class="nav-link" href="/logout">Logout</a>
+                    </span>
                     {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="/home">Home</a>
-                    </li>
                     {% endif %}
+                </ul>
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="/create-post">Post</a>
                     </li>
-                </ul>
-            </div>
-            <div>
-                <ul class="navbar-nav">
+
                     <li class="nav-item">
-                        <a class="nav-link" href="/login">Login</a>
+                        <a class="nav-link" href="/news">News</a>
                     </li>
                 </ul>
             </div>
