--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>Dev Blog</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -10,7 +10,14 @@
     <body>
         <div class="page-header">
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/news">Dev Diary & News</a></h1>
+            <h4><a href="/">Home</a></h4>
+            {% if user.is_authenticated %}
+            <div class="d-flex">
+                <span class="navbar-text">Logged in as {{user.username}} | <a class="nav-link" href="/logout">Logout</a></span>
+            </div>
+            {% else %}
+            {% endif %}
         </div>
         <div class="content container">
             <div class="row">
