News and Main Posts deploy

--- a/auth/templates/auth/home.html
+++ b/auth/templates/auth/home.html
@@ -1,12 +1,14 @@
 {% extends 'auth/base.html' %}
 {% block title %}Home{% endblock %}
 {% block content %}
+<br><br><br><br>
 {% for post in posts %}
+<br>
 <div class="card mt-2">
     <div class="card-header"><strong>@{{post.author.username}}</strong></div>
     <div class="card-body d-flex flex-row justify-content-between">
         <div>
-            <h5 class="card-title">{{post.title}}</h5>
+            <h5 class="card-title"><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h5>
             <p>{{post.description}}</p>
         </div>
         <div>
