--- a/auth/templates/auth/base.html
+++ b/auth/templates/auth/base.html
@@ -1,30 +1,44 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> -->
+    <!-- <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
+    <!-- <link rel="stylesheet" href="{% static 'css/blog.css' %}"> -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
+    
+    <link rel="stylesheet" href="{% static 'css/auth.css' %}">
     <title>{% block title %}Arcanium{% endblock %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expanded-lg navbar-dark bg-dark">
-        <div class="container-fluid">
+    <nav class="navbar navbar-default navbar-fixed-top">
+    <!-- <nav class="navbar navbar-expanded-lg navbar-dark bg-dark"> -->
+        <!-- <div class="container-fluid"> -->
+        <div class="container">
             <div>
-                <ul class="navbar-nav">
+                <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
                     <span class="navbar-text">Logged in as {{user.username}} | <a class="nav-link" href="/logout">Logout</a>
                     </span>
                     {% else %}
                     {% endif %}
                 </ul>
-                <ul class="navbar-nav mx-auto">
+                <ul class="nav navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="/create-post">Post</a>
+                        <a class="nav-link" href="/create-post">Create a Post</a>
                     </li>
 
                     <li class="nav-item">
@@ -38,8 +52,8 @@
         {% block content %}
         {% endblock %}
     </div>
-    <script 
+    <!-- <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-    </script>
+    </script> -->
 </body>
 </html>
